Agregando el botón de Reiniciar Sorteo en index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <img src="assets/play_circle_outline.png" alt="Ícono para sortear">
                     Sortear amigo
                 </button>
+                <button id="reiniciar" class="button-draw-1" onclick="reinciarSorteo()">Reiniciar Sorteo</button>
             </div>
         </section>
     </main>
